--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,2 @@
-requests
-flask
-python-dotenv
-python-telegram-bot
-
-# Core Libraries
-requests==2.31.0
-beautifulsoup4==4.12.3
-python-telegram-bot==20.7
-
-# Async Support
-asyncio==3.4.3
-
-
-urllib3==2.0.7
-certifi==2024.2.2
-charset-normalizer==3.3.2
+telethon==1.28.5
+python-dotenv==1.0.0
